# cuda-ai-2026

./: README.md
default/1_gelu_omp/belov_dmitry/: gelu_omp.cpp
default/1_gelu_omp/kireev_daniil/: gelu_omp.cpp
default/1_gelu_omp/pushchin_alexey/: gelu_omp.cpp  gelu_omp.h  log.txt
default/1_gelu_omp/salnikov_nikolay/: gelu_omp.cpp
default/1_gelu_omp/smirnov_denis/: gelu_omp.cpp
default/1_gelu_omp/volkovskiy_pavel/: gelu_omp.cpp
default/1_gelu_omp/zemskov_roman/: gelu_omp.cpp  gelu_omp.h
default/1_gelu_omp/znamenskiy_mikhail/: gelu_omp.cpp  main.cpp
default/2_gelu_cuda/chekmaryov_petr/: gelu_cuda.cu
default/2_gelu_cuda/chervyakov_ivan/: gelu_cuda.cu
default/2_gelu_cuda/kireev_daniil/: gelu_cuda.cu
default/2_gelu_cuda/korobeynikov_aleksey/: gelu_cuda.cu
default/2_gelu_cuda/lukicheva_polina/: gelu_cuda.cu
default/2_gelu_cuda/malinin_nikita/: gelu_cuda.cu
default/2_gelu_cuda/novozhilov_mikhail/: gelu_cuda.cu
default/2_gelu_cuda/pisarevsky_vadim/: CMakeLists.txt  gelu_cuda.cu
default/2_gelu_cuda/putilin_artyom/: gelu_cuda.cu
default/2_gelu_cuda/rodygin_vadim/: gelu_cuda.cu
default/2_gelu_cuda/salnikov_nikolay/: gelu_cuda.cu
default/2_gelu_cuda/vikhrev_ivan/: README.md  gelu_cuda.cu  gelu_cuda.h  main.cu
default/2_gelu_cuda/volkovskiy_pavel/: gelu_cuda.cu  gelu_cuda.h
default/2_gelu_cuda/zinoviev_vladimir/: log.txt
default/2_gelu_cuda/znamenskiy_mikhail/: CMakeLists.txt  gelu_cuda.cu  gelu_cuda.h  main.cpp
default/2_gelu_cuda/zvorykin_aleksandr/: gelu_cuda.cpp
default/3_naive_gemm_cuda/chekmaryov_petr/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/chervyakov_ivan/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/ermilov_dmitry/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/korobeynikov_aleksey/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/kozlov_mikhail/: CMakeLists.txt  main.cpp  naive_gemm_cuda.cu  naive_gemm_cuda.h
default/3_naive_gemm_cuda/pinegina_natalia/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/pisarevsky_vadim/: naive_gemm_cuda  naive_gemm_cuda.cu
default/3_naive_gemm_cuda/putilin_artyom/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/salnikov_nikolay/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/volkovskiy_pavel/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/zinoviev_vladimir/: log.txt
default/3_naive_gemm_cuda/znamenskiy_mikhail/: CMakeLists.txt  main.cpp  naive_gemm_cuda.cu
default/3_naive_gemm_cuda/zvorykin_aleksandr/: naive_gemm_cuda.cu
default/4_block_gemm_cuda/ermilov_dmitry/: block_gemm_cuda.cu
default/4_block_gemm_cuda/kozlov_mikhail/: block_gemm_cuda.cu  block_gemm_cuda.h
default/4_block_gemm_cuda/malinin_nikita/: block_gemm_cuda.cu
default/4_block_gemm_cuda/novozhilov_mikhail/: block_gemm_cuda.cu
default/4_block_gemm_cuda/pinegina_natalia/: block_gemm_cuda.cu  block_gemm_cuda.h
default/4_block_gemm_cuda/putilin_artyom/: block_gemm_cuda.cu
default/5_gemm_cublas/chekmaryov_petr/: gemm_cublas.cu
default/5_gemm_cublas/pigasin_dmitry/: CMakeLists.txt  CMakePresets.json  gemm_cublas.cu  main.cpp
default/5_gemm_cublas/pinegina_natalia/: gemm_cublas.cu
default/5_gemm_cublas/salnikov_nikolay/: gemm_cublas.cu  log.txt
default/5_gemm_cublas/smirnov_denis/: gemm_cublas.cu
default/5_gemm_cublas/vikhrev_ivan/: README.md  gemm_cublas.cu  gemm_cublas.h  main.cu
default/5_gemm_cublas/znamenskiy_mikhail/: CMakeLists.txt  gemm_cublas.cu  main.cpp
default/5_gemm_cublas/zvorykin_aleksandr/: gemm_cublas.cu
default/6_softmax_cuda/bolshakova_viktoriya/: log.txt
default/6_softmax_cuda/pigasin_dmitry/: CMakeLists.txt  main.cpp  softmax_cuda.cu
(+21 files in other folders)
